# ml_vin_decoder_app

./: .flake8  .gitignore  Makefile  README.md  config.toml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: check.yml  check_style.yml  lint.yml  release_to_prod.yml
docker/training/: Dockerfile
vin_decoder/: cli.py  config.py  data_extraction.py  data_preprocessing.py  data_validation.py
vin_decoder/data/: extraction.py  feature_engineering.py  preprocessing.py  validation.py
vin_decoder/model/: feature_engineering.py  training.py
