[tool.poetry]
name = "vin_decoder"
version = "0.1.0"
description = ""
authors = ["Erikas Valinskas <ervalinskas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.common.dependencies]
loguru = "^0.7.2"
scikit-learn = "^1.4.1.post1"
mlflow = "^2.10.2"
xgboost = "^2.0.3"


[tool.poetry.group.training.dependencies]
click = "^8.1.7"
pandas = "^2.2.1"
pydantic = "^2.6.2"
pydantic-settings = "^2.2.1"
dvc = "^3.47.0"
hyperopt = "^0.2.7"


[tool.poetry.group.serving.dependencies]
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
streamlit = "^1.31.1"


[tool.poetry.group.dev.dependencies]
notebook = "^7.1.0"
seaborn = "^0.13.2"


[tool.poetry.group.style.dependencies]
black = "^24.2.0"
flake8 = "^7.0.0"
isort = "^5.13.2"


[tool.poetry.group.test.dependencies]
great-expectations = "^0.18.9"
mypy = "^1.8.0"
pytest = "^8.0.2"
pytest-cov = "^4.1.0"
pytest-env = "^1.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
vin-decoder = "vin_decoder.cli:vin_decoder"

[tool.black]
include = '\.pyi?$'
target_version = ['py312']
exclude = '''
/(
      .eggs         # exclude a few common directories in the
    | .git          # root of the project
    | .hg
    | .mypy_cache
    | .tox
    | .venv
    | _build
    | buck-out
    | build
    | dist
    | __pycache__
  )/
'''
